[gd_scene load_steps=12 format=3 uid="uid://cdc5kfknhi3iv"]

[ext_resource type="Texture2D" uid="uid://sq6oemwdbwde" path="res://character/assets/boss.png" id="1_5xax4"]
[ext_resource type="Script" path="res://boss.gd" id="1_q27b0"]
[ext_resource type="AudioStream" uid="uid://ctqu0e8v32p7b" path="res://character/assets/boss sound.mp3" id="3_2p4yr"]

[sub_resource type="Animation" id="Animation_epfb4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u5txg"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 79]
}

[sub_resource type="Animation" id="Animation_651kv"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_a5ijo"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01tuu"]
_data = {
"RESET": SubResource("Animation_epfb4"),
"death": SubResource("Animation_u5txg"),
"idle": SubResource("Animation_651kv"),
"walk": SubResource("Animation_a5ijo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uh0e"]
size = Vector2(40, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_l1jmk"]
radius = 46.0977

[sub_resource type="CircleShape2D" id="CircleShape2D_tah3s"]
radius = 382.655

[node name="Boss" type="CharacterBody2D" node_paths=PackedStringArray("_texture", "_animation") groups=["boss"]]
script = ExtResource("1_q27b0")
_texture = NodePath("Texture")
_animation = NodePath("Animation")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_01tuu")
}

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_5xax4")
hframes = 16
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 31)
shape = SubResource("RectangleShape2D_5uh0e")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-0.5, -4.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
show_behind_parent = true
position = Vector2(2.5, -6.5)
shape = SubResource("CircleShape2D_l1jmk")

[node name="DetectionArea" type="Area2D" parent="." groups=["enemy"]]
visible = false
show_behind_parent = true

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
show_behind_parent = true
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_tah3s")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2p4yr")
volume_db = -15.407

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
